--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> Udfyld her</h1>
     <form name="foerste_formular" netlify>
     <label> navn </label>
-    <input type="text" name="fname" />
+    <input type="text" name="name" />
     <button type="submit">Indsend</button>
     </form>
 </body>
